// greeting service definition
service Greeter {
	// sends greeting
	rpc SayHello (HelloRequest) returns (HelloReply) {}
	// second greeting
	rpc SayHelloAgain (HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}
